Login done, add worker done, password encryption ( easy encryption ) done

--- a/ChristineLeDucApplicationCustomersService/CustomersService/Properties/Resources.resx
+++ b/ChristineLeDucApplicationCustomersService/CustomersService/Properties/Resources.resx
@@ -121,19 +121,22 @@
   <data name="vinkje" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vinkje.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="kruis" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\kruis.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="login" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ExistingComplaint" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ExistingComplaint.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="NewComplaint" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NewComplaint.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="kruis" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kruis.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="login" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AddAccount" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AddAccount.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
